refactor : 디렉토리 구조 변경

--- a/exercises/Patient/Patient.Gui/Patient.Gui.csproj
+++ b/exercises/Patient/Patient.Gui/Patient.Gui.csproj
@@ -28,6 +28,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PatientApp.Core\PatientApp.Core.csproj" />
+    <ProjectReference Include="..\Patient.Core\Patient.Core.csproj" />
   </ItemGroup>
 </Project>
